# high-performance-spark-examples

./: .gitignore  .jvmopts  .scalafix.conf  .scalafmt.conf  .travis.yml  Dockerfile  Dockerfile-mini  LICENSE  README.md  accumulated_hashtag.ipynb  appveyor.yml  build.sbt  build_container.sh  build_windows.sbt  c  env_setup.sh  gluten_spark_34_ex.sh  re-calculate_ows.ipynb  run_container.sh  run_pipeline_example.sh  run_pyspark_examples.sh  run_scala_spark_ex.sh  run_sql_example.py  run_sql_example.sh  run_sql_examples.sh  se_complex.json  se_complex_pretty.json  se_simple.json  setup_gluten.sh  spark_expectations_sample_rules.json
GoldiLocks/: QuantileAndDistinct.scala  QuantileOnly.scala
accelerators/: comet_env_setup.sh  comet_ex.sh  gluten_config.properties  gluten_env_setup.sh  gluten_spark_34_ex.sh  install_rust_if_needed.sh  run_gluten.sh  setup.sh  setup_comet.sh  setup_gluten_deps.sh  setup_gluten_from_src.sh  setup_gluten_spark34.sh
conf/: log4j.properties  sbtconfig.txt
data/: project.csv
high_performance_pyspark/: SQLLineage.py  __init__.py  bad_pyspark.py  simple_perf.py  simple_perf_test.py
migration/: sql.sh
misc/: kernel.json  (+1 more)
native/src/: CMakeLists.txt
native/src/c/gluten/: GlutenUDF.cpp
native/src/c/include/: com_highperformancespark_examples_ffi_SumJNI.h
native/src/fortran/: sumf.f95
python/: README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
python/examples/: SQLLineage.py  __init__.py  bad_pyspark.py  dual_write.py  load_previous_run_data.py  pandera_ex.py  simple_perf.py  spark_expectations.py  spark_expectations_config.py  spark_expectations_example.py  spark_expectations_sample_rules.json  spark_large_targetsize.py  spark_large_targetsize.py.conf  test_dual_write.py  test_dual_write_new.py  test_load_previous_run_data.py  udf.py
src/: CMakeList_windows.txt  CMakeLists.txt
src/main/c/: sum.c  sum.h  sum_wrapper.c  sumf_wrapper.c
src/main/c/include/: com_highperformancespark_example_SumJNI_SumJNI.h
src/main/fortran/: sumf.f95
src/main/java/com/highperformancespark/examples/: JavaInterop.java  WordCount.java
src/main/java/com/highperformancespark/examples/dataframe/: JavaHappyPandas.java  JavaLoadSave.java  JavaUDFs.java
src/main/java/com/highperformancespark/examples/goldilocks/: JavaGoldiLocksFirstTry.java  JavaGoldiLocksGroupByKey.java
src/main/java/com/highperformancespark/examples/objects/: JavaCoffeeShop.java  JavaGoldiLocksRow.java  JavaPandaInfo.java  JavaPandaPlace.java  JavaPandas.java  JavaRawPanda.java
src/main/julia/: setup.jl
src/main/perl/: Changes  ghinfo.pl
src/main/perl/t/: pod.t
src/main/perl/xt/: boilerplate.t
src/main/r/: dapply.R  wc.R
src/main/scala/com/high-performance-spark-examples/GoldiLocks/: DataFrameStatistics.scala  GoldiLocksFirstTry.scala  GoldiLocksSecondarySort.scala  GoldiLocksWithHashMap.scala  QuantileAndDistinct.scala  QuantileOnly.scala  RDDJoinExamples.scala  RankStatsByGroup.scala  SecondarySort.scala
src/main/scala/com/high-performance-spark-examples/dataframe/: HappyPandas.scala  LoadSave.scala  MixedDataset.scala  RawPandas.scala  RegularSQL.scala  UDFs.scala
src/main/scala/com/high-performance-spark-examples/errors/: throws.scala
src/main/scala/com/high-performance-spark-examples/goldilocks/: GoldilocksFirstTry.scala  GoldilocksSecondarySort.scala  GoldilocksWithHashMap.scala  RDDJoinExamples.scala  SecondarySort.scala
src/main/scala/com/high-performance-spark-examples/ml/: CustomPipeline.scala  SimpleExport.scala  SimpleNaiveBayes.scala  SimplePipeline.scala
src/main/scala/com/high-performance-spark-examples/mllib/: GoldilocksMLlib.scala
src/main/scala/com/high-performance-spark-examples/native/: NativeExample.scala  PipeExample.scala  StandAlone.scala  SumJNA.scala  SumJNI.scala
src/main/scala/com/high-performance-spark-examples/perf/: SimplePerfTest.scala
src/main/scala/com/high-performance-spark-examples/streaming/: DStream.scala  Structured.scala
src/main/scala/com/high-performance-spark-examples/tokenize/: SampleTokenize.scala
src/main/scala/com/high-performance-spark-examples/tools/: FilterInvalidPandas.scala  GenerateScalingData.scala  SampleData.scala
src/main/scala/com/high-performance-spark-examples/transformations/: Accumulators.scala  NarrowAndWide.scala  NewAccumulators.scala  SmartAggregations.scala  joins.scala
src/main/scala/com/high-performance-spark-examples/wordcount/: WordCount.scala
src/test/java/com/highperformancespark/examples/: JavaInteropTest.java
src/test/java/com/highperformancespark/examples/dataframe/: JavaHappyPandasTest.java
src/test/java/com/highperformancespark/examples/goldilocks/: JavaQuantileOnlyArtisanalTest.java
src/test/scala/com/high-performance-spark-examples/GoldiLocks/: EvaluationTests.scala  QuantileOnlyArtisanalTest.scala  SortingTests.scala
src/test/scala/com/high-performance-spark-examples/dataframe/: HappyPandas.scala  HappyPandasTest.scala  MixedDatasetSuite.scala
src/test/scala/com/high-performance-spark-examples/errors/: ThrowsSuite.scala
src/test/scala/com/high-performance-spark-examples/goldilocks/: EvaluationTests.scala  GoldilocksLargeTests.scala  JoinTest.scala  QuantileOnlyArtisanalTest.scala  SortingTests.scala
src/test/scala/com/high-performance-spark-examples/ml/: CustomPipeline.scala  SimpleNaiveBayes.scala
src/test/scala/com/high-performance-spark-examples/mllib/: GoldilocksMLlibSuite.scala
src/test/scala/com/high-performance-spark-examples/native/: NativeExample.scala  PipeExampleSuite.scala
src/test/scala/com/high-performance-spark-examples/streaming/: DStreamSuite.scala
src/test/scala/com/high-performance-spark-examples/tokenize/: SampleTokenizeSuite.scala
src/test/scala/com/high-performance-spark-examples/tools/: FilterInvalidPandasSuite.scala  GenerateScalingDataSuite.scala
src/test/scala/com/high-performance-spark-examples/transformations/: Accumulators.scala  JoinTest.scala
src/test/scala/com/high-performance-spark-examples/wordcount/: WordCountTest.scala
src/test/scala/com/highperformancespark/examples/: JavaInteropHelper.scala
(+112 files in other folders)
