[metadata]
name = examples
version = attr: examples.__version__
author = Holden and Anya
author_email = your@email.address
url = https://github.com/high-performance-spark/high-performance-spark-examples
description = Python Examples for High Performance Spark
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools, pyspark
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas == 2.2.0
    PyYAML >= 6.0
    typer
    mypy
    pyspark
    pyspark-asyncactions
    

[options.entry_points]
console_scripts = 
    my-example-utility = example.example_module:main

[options.extras_require]
dev = 
    black>=22.1.0
    flake8>=4.0.1

[options.package_data]
* = README.md
